# vcclone

./: .gitignore  Cargo.toml  README.md  index.html  main.css
apps/: skybox_generator.py
apps/floor_tile_maker/: gen_floor.py  gen_tile_single.py
assets/gltf/: firebolt.gltf  shard1.gltf  shard2.gltf  shard3.gltf  skybox.gltf
assets/shaders/: cube_texture.frag  cube_texture.vert  no_texture.frag  no_texture.vert
src/: main.rs  utils.rs
src/assets/: backwall.rs  fireball.rs  firebolt.rs  lightning_bolt.rs  mod.rs  skybox.rs  wall.rs
src/characters/: enemy_wizard.rs  mod.rs
src/model/: camera.rs  model.rs
src/pages/: game.rs  home.rs  mod.rs  viewmanager.rs
src/player/: keymanager.rs  mod.rs  player.rs
