[package]
name = "vcclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
js-sys = "0.3.68"
rand = "0.8.5"
yew = { version="0.21.0", features=["csr"] }
yew-router = "0.18.0"

[dependencies.web-sys]
version = "0.3.67"
features = [
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageData",
  "ImageBitmap",
  "Storage",
  "Touch",
  "TouchEvent",
  "TouchList"
]
