[package]
name = "vcclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
gltf-json = "1.4.1"
serde_json = "1.0.149"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3"
rand = "0.8.5"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
yew = { version="0.22.0", features=["csr"] }
yew-router = "0.19.0"
base64 = "0.22.1"
euclid = "0.22.14"
instant = { version = "0.1.13", features = ["wasm-bindgen", "inaccurate"] }

[dependencies.web-sys]
version = "0.3.67"
features = [
  "HtmlSelectElement",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageData",
  "ImageBitmap",
  "KeyboardEvent",
  "KeyboardEventInit",
  "Storage",
  "Touch",
  "TouchEvent",
  "TouchList",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGlShader",
  "WebGlUniformLocation",
  "WebGlTexture"
]
